--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4216, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Module::Build version 0.4218, CPAN::Meta::Converter version 2.150001'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,7 +18,7 @@ name: Data-Transform-ExplicitMetadata
 provides:
   Data::Transform::ExplicitMetadata:
     file: lib/Data/Transform/ExplicitMetadata.pm
-    version: 0.05_02
+    version: '0.06'
 recommends:
   FileHandle::Fmode: '0.14'
 requires:
@@ -29,5 +29,4 @@ requires:
   perl: v5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.05_02
-x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
+version: '0.06'
