--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.422, CPAN::Meta::Converter version 2.150001'
+generated_by: 'Module::Build version 0.4224, CPAN::Meta::Converter version 2.150010'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,7 +18,7 @@ name: Data-Transform-ExplicitMetadata
 provides:
   Data::Transform::ExplicitMetadata:
     file: lib/Data/Transform/ExplicitMetadata.pm
-    version: '0.08'
+    version: '0.09'
 recommends:
   FileHandle::Fmode: '0.14'
 requires:
@@ -29,4 +29,5 @@ requires:
   perl: v5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: '0.08'
+version: '0.09'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
